# ds-protocol-odata-py-lib

./: CONTRIBUTING.md  Makefile  PyPI.md  README.md  pyproject.toml
.config/: pytest.ini  ruff.toml
.github/workflows/: release.yaml
docs/source/: conf.py  index.rst
examples/: 01_dataset.py  01_read.py  02_create.py  03_update.py  04_delete.py  05_delete_with_etag.py
src/ds_protocol_odata_py_lib/: __init__.py  enums.py
src/ds_protocol_odata_py_lib/dataset/: __init__.py  odata.py
tests/: test_enums.py  test_version.py
tests/dataset/: __init__.py  test_create.py  test_dataset.py  test_delete.py  test_read.py  test_update.py  test_write.py
